--- a/UnitConverterBlzrSrv/Shared/NavMenu.razor
+++ b/UnitConverterBlzrSrv/Shared/NavMenu.razor
@@ -11,17 +11,22 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Length
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="temperature">
+                <span class="oi oi-arrow-right" aria-hidden="true"></span> Temperature
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="weight">
+                <span class="oi oi-arrow-right" aria-hidden="true"></span> Weight
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="gallon">
+                <span class="oi oi-arrow-right" aria-hidden="true"></span> Gallon
             </NavLink>
         </div>
     </nav>
