Modified the links of the converters' pages

--- a/UnitConverterBlzrSrv/Pages/Temperature.razor
+++ b/UnitConverterBlzrSrv/Pages/Temperature.razor
@@ -1,5 +1,5 @@
 ﻿@namespace UnitConverterBlzrSrv.Pages
-@page "/temperature"
+@page "/fahrenheit-to-celsius-converter"
 
 <h3>Temperature Converter</h3>
 
