--- a/UnitConverterBlzrSrv/Shared/NavMenu.razor
+++ b/UnitConverterBlzrSrv/Shared/NavMenu.razor
@@ -15,17 +15,17 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="temperature">
+            <NavLink class="nav-link" href="fahrenheit-to-celsius-converter">
                 <span class="oi oi-arrow-right" aria-hidden="true"></span> Temperature
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weight">
+            <NavLink class="nav-link" href="pound-to-kilogram-converter">
                 <span class="oi oi-arrow-right" aria-hidden="true"></span> Weight
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="gallon">
+            <NavLink class="nav-link" href="gallon-to-liter-converter">
                 <span class="oi oi-arrow-right" aria-hidden="true"></span> Gallon
             </NavLink>
         </div>
